--- a/styles/login.css
+++ b/styles/login.css
@@ -33,9 +33,9 @@ fieldset button:hover {
     color: white;
 }
 
-a{
+fieldset a{
     justify-self: center;
 }
-a:hover{
+fieldset a:hover{
     color: blue;
 }
