--- a/styles/products.css
+++ b/styles/products.css
@@ -10,6 +10,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
     gap: 25px;
+    text-decoration: none;
 }
 
 #products h1{
